--- a/src/components/products/ProductRow/ProductRow.css
+++ b/src/components/products/ProductRow/ProductRow.css
@@ -66,3 +66,8 @@
     display: none;
   }
 }
+@media (max-width: 500px) {
+  .lt-prod-row__cell--acc {
+    display: none;
+  }
+}
